--- a/BayesianCNN/Notebooks/pret/model_preparation.ipynb
+++ b/BayesianCNN/Notebooks/pret/model_preparation.ipynb
@@ -149,8 +149,9 @@
     "    df_target_spectral = get_spectra(df_target__)\n",
     "    print(len(df_target_spectral))\n",
     "\n",
+    "    #this is use to trim the incoming data when we upload the model to ur api\n",
     "    if over_write_csv:\n",
-    "        pd.DataFrame(df_source_spectral_train).head(2).to_csv(\"../Data/source_file.csv\", index=False)\n",
+    "        pd.DataFrame(df_source_spectral_train).head(2).to_csv(\"../Data/ph_source_file.csv\", index=False)\n",
     "\n",
     "    df_source_spectral_train=df_source_spectral_train.to_numpy()\n",
     "    df_source_spectral_val=df_source_spectral_val.to_numpy()\n",
@@ -212,6 +213,8 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "#change to match your the path where you have the cal and cal dataset\n",
     "GLOBAL_CSV=[ \"C:/Projects/SmapProjects/SpectraData2023/mir_pret_cali.csv\"]\n",
     "#df_sources, df_targets, df_sources_spectral, df_targets_spectral=get_spectra_data(train_csv=GLOBAL_CSV,target_dataframe=df)\n",
     "\n",
@@ -11232,7 +11235,7 @@
    "source": [
     "#save model\n",
     "best_model_name = f'mir_pret_model-1.0.1.pt'\n",
-    "torch.save(best_trained_model.state_dict(),os.path.join(\"../model-store/\",best_model_name))\n"
+    "torch.save(best_trained_model.state_dict(),os.path.join(\"../../model-store/\",best_model_name))\n"
    ]
   },
   {
@@ -11246,7 +11249,7 @@
    "outputs": [],
    "source": [
     "best_model_name = f'mir_pret_model-1.0.0.pt'\n",
-    "final_model=torch.load(os.path.join(\"../model-store/\",best_model_name))"
+    "final_model=torch.load(os.path.join(\"../../model-store/\",best_model_name))"
    ]
   },
   {
@@ -11397,7 +11400,7 @@
     }
    ],
    "source": [
-    "final_df.to_csv(\"C:/Projects/ResearchProjects/Research-SoilSpectroscopy/Smap/Models/CNN/Mir/pret.csv\")\n",
+    "final_df.to_csv(\"../../CNN/cnn_pret.csv\")\n",
     "final_df"
    ]
   },
