--- a/BayesianCNN/Notebooks/texture/model_preparation.ipynb
+++ b/BayesianCNN/Notebooks/texture/model_preparation.ipynb
@@ -141,8 +141,9 @@
     "    df_target_spectral = get_spectra(df_target__)\n",
     "    print(len(df_target_spectral))\n",
     "\n",
+    "    #this is use to trim the incoming data when we upload the model to ur api\n",
     "    if over_write_csv:\n",
-    "        pd.DataFrame(df_source_spectral_train).head(2).to_csv(\"../Data/source_file.csv\", index=False)\n",
+    "        pd.DataFrame(df_source_spectral_train).head(2).to_csv(\"../Data/ph_source_file.csv\", index=False)\n",
     "\n",
     "    df_source_spectral_train=df_source_spectral_train.to_numpy()\n",
     "    df_source_spectral_val=df_source_spectral_val.to_numpy()\n",
@@ -205,6 +206,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "#change to match your the path where you have the cal and cal dataset\n",
     "GLOBAL_CSV=[ \"C:/Projects/SmapProjects/SpectraData2023/mir_texture_cali.csv\"]\n",
     "#df_sources, df_targets, df_sources_spectral, df_targets_spectral=get_spectra_data(train_csv=GLOBAL_CSV,target_dataframe=df)\n",
     "\n",
@@ -14590,7 +14592,7 @@
    "source": [
     "#save model\n",
     "best_model_name = f'mir_soil_texture_model-1.0.1.pt'\n",
-    "torch.save(best_trained_model.state_dict(),os.path.join(\"../model-store/\",best_model_name))"
+    "torch.save(best_trained_model.state_dict(),os.path.join(\"../../model-store/\",best_model_name))"
    ],
    "metadata": {
     "collapsed": false,
@@ -14605,7 +14607,7 @@
    "outputs": [],
    "source": [
     "best_model_name = f'mir_soil_texture_model-1.0.1.pt'\n",
-    "model=torch.load(os.path.join(\"../model-store/\",best_model_name))"
+    "model=torch.load(os.path.join(\"../../model-store/\",best_model_name))"
    ],
    "metadata": {
     "collapsed": false,
@@ -14867,7 +14869,7 @@
     }
    ],
    "source": [
-    "final_df.to_csv(\"C:/Projects/ResearchProjects/Research-SoilSpectroscopy/Smap/Models/CNN/Mir/texture.csv\")\n",
+    "final_df.to_csv(\"../../CNN/cnn_texture.csv\")\n",
     "final_df"
    ],
    "metadata": {
