updating texture notbook

--- a/BayesianCNN/Notebooks/texture/model_preparation.ipynb
+++ b/BayesianCNN/Notebooks/texture/model_preparation.ipynb
@@ -14477,83 +14477,7 @@
    ],
    "source": [
     "model,history,best_mse =train_func(model,lr=0.0000589,\n",
-    "                                   n_epochs=1000,batch_size=66,optimizer_=\"Nadam\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "layers.0.fc.weight\n",
-      "layers.0.fc.bias\n",
-      "layers.2.weight\n",
-      "layers.2.bias\n",
-      "layers.3.fc.weight\n",
-      "layers.3.fc.bias\n",
-      "layers.5.weight\n",
-      "layers.5.bias\n",
-      "layers.6.fc.weight\n",
-      "layers.6.fc.bias\n",
-      "layers.8.weight\n",
-      "layers.8.bias\n",
-      "layers.9.fc.weight\n",
-      "layers.9.fc.bias\n",
-      "layers.11.weight\n",
-      "layers.11.bias\n",
-      "output_layer.weight\n",
-      "output_layer.bias\n",
-      "uncertainty_layer.weight_mu\n",
-      "uncertainty_layer.weight_log_sigma\n",
-      "uncertainty_layer.bias_mu\n",
-      "uncertainty_layer.bias_log_sigma\n"
-     ]
-    }
-   ],
-   "source": [
-    "# #freeze all layer expect last two (uncertainity and predction layer)\n",
-    "# for name, param in model.named_parameters():\n",
-    "#     print(name)\n",
-    "#     if name.startswith('uncertainty_layer') or name.startswith('output_layer'):\n",
-    "#         param.requires_grad = True\n",
-    "#     else:\n",
-    "#         param.requires_grad = False\n",
-    "# Access the uncertainty_layer\n",
-    "# uncertainty_layer = model.uncertainty_layer\n",
-    "#\n",
-    "# # Modify the prior_sigma\n",
-    "# new_prior_sigma = 0.001  # Replace with your an higher value\n",
-    "# model.uncertainty_layer.prior_sigma = new_prior_sigma\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 363,
-   "outputs": [],
-   "source": [
-    "# # Initialize optimizer with different learning rates based on layer names\n",
-    "# optimizer = torch.optim.Adam([\n",
-    "#     {'params': param, 'lr': 0.01}  # Lower learning rate for uncertainty layers\n",
-    "#     if 'uncertainty' in name else\n",
-    "#     {'params': param, 'lr': 0.0001}  # Higher learning rate for other layers\n",
-    "#     for name, param in model.named_parameters()\n",
-    "# ])"
+    "                                   n_epochs=1000,batch_size=66,optimizer_=\"Nadam\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -14662,39 +14586,14 @@
     "        X_sample = scaler.transform(X_sample)\n",
     "        X_sample = torch.tensor(X_sample, dtype=torch.float32)\n",
     "        y_pred = model(X_sample)\n",
-    "        print(f\"{y_pred.numpy()} (expected {y_test[i].numpy()})\")\n"
+    "        print(f\"{y_pred.numpy()} (expected {y_test[i].numpy()})\")\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Now, back to your question: \"why is the prediction interval narrow or create a separate layer for uncertainty?\"\n",
-    "\n",
-    "### The narrowness or width of the prediction interval (uncertainty) depends on several factors:\n",
-    "\n",
-    "### Standard Deviations (weight_rho and bias_rho):\n",
-    "### The standard deviations of the weight and bias distributions play a significant role in determining the width of the prediction interval. If these standard deviations are small, it indicates that the model has low uncertainty in its parameters, which can lead to narrower prediction intervals.\n",
-    "\n",
-    "### Number of Monte Carlo Samples: When making predictions with Bayesian neural networks, you typically perform multiple forward passes (Monte Carlo samples) with different sets of sampled weights and biases. The more samples you use, the better you can estimate the predictive uncertainty. Increasing the number of samples can lead to more accurate and wider prediction intervals.\n",
-    "\n",
-    "### Model Complexity: The architecture and complexity of your Bayesian CNN can also influence the prediction interval. More complex models with more parameters may have wider prediction intervals because there's more room for uncertainty in the predictions.\n",
-    "\n",
-    "### Data Variability: The inherent variability in your training data also contributes to the width of the prediction interval. If your training data is noisy or has inherent variability, this will be reflected in the uncertainty of the predictions.\n",
-    "\n",
-    "### Regarding creating a separate layer for uncertainty, the code you provided already handles uncertainty by modeling it in the parameters of the neural network. Creating a separate layer for uncertainty might be useful in some cases, but it's not a standard practice in Bayesian neural networks. The uncertainty is typically captured in the parameter distributions as shown in your code.\n",
-    "### In summary, the prediction interval's narrowness or width depends on the model's architecture, the standard deviations of parameter distributions, the number of samples used during inference, and the inherent variability in the data. Bayesian neural networks provide a principled way to estimate predictive uncertainty by treating model parameters as random variables.\n",
-    "### weight_rho\n",
-    "\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
